RESOLVED FIXED304172
REGRESSION(300618@main): `letter-spacing` transition no longer works
https://bugs.webkit.org/show_bug.cgi?id=304172
Summary REGRESSION(300618@main): `letter-spacing` transition no longer works
Antoine Quint
Reported 2025-12-15 03:44:38 PST
It was reported on Reddit (https://www.reddit.com/r/css/comments/1ple3jq/safari_262_bug_animated_letterspacing/) that `letter-spacing` transitions don't work anymore. Using the test at https://output.jsbin.com/meweci/1 I managed to regress it to 300618@main, the fix for bug 299314.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-15 04:14:58 PST
Sam Weinig
Comment 2 2025-12-15 13:15:07 PST
Guessing we need to change conservativelyCollectChangedAnimatableProperties for the new location of letterSpacing storage.
Sam Weinig
Comment 3 2025-12-16 11:37:20 PST
Sam Weinig
Comment 4 2025-12-16 11:41:20 PST
My guess was wrong. The real issue was that we weren't synchronizing letter-spacing (and word-spacing for that matter) to the FontCascade during updates made from animation code (since the interpolation functions call RenderStyle::setFoo directly, and don't have the lazy font dirtying logic of Style::BuilderState). There was also a related issue when animating font-size of an element with percentage letter-spacing or word-spacing not re-synchronizing.
EWS
Comment 5 2025-12-16 22:32:20 PST
Committed 304575@main (3a3971d9fc92): <https://commits.webkit.org/304575@main> Reviewed commits have been landed. Closing PR #55493 and removing active labels.
Ahmad Saleem
Comment 6 2026-01-27 03:06:50 PST
*** Bug 306261 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.